--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,1 +1,74 @@
+/*1. grid.css内容复制如下，作用等同@import url("grid.css");*/
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  max-width: 400px;
+  height: 400px;
+  gap: 10px;
+  margin: 2px auto;
+  animation: resize 3000ms ease infinite both;
+}
+
+.item {
+  --color2: 36;
+  --color2: 76;
+  --delay: 0ms;
+  background-color: hsl(var(--color1), 100%, 60%);
+  animation: colorChange 3000ms ease var(--delay) infinite both;
+}
+.item:nth-child(4n-2) {
+  --delay: 1000ms;
+}
+.item:nth-child(4n) {
+  --delay: 2000ms;
+}
+
+@keyframes colorChange {
+  0% {
+    background-color: #ffb647;
+  }
+  25% {
+    background-color: #ceff47;
+  }
+  50% {
+    background-color: #47afff;
+  }
+  75% {
+    background-color: #ff47f0;
+  }
+  100% {
+    background-color: #ffb647;
+  }
+}
+@keyframes resize {
+  0% {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  25% {
+    grid-template-columns: 1fr 2fr 3fr;
+    grid-template-rows: 1fr 2fr 3fr;
+  }
+  50% {
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr;
+  }
+  75% {
+    grid-template-columns: 3fr 2fr 1fr;
+    grid-template-rows: 3fr 2fr 1fr;
+  }
+  100% {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+}
+
+ /*2. 背景 canvas 12个圆的动画*/
+  #bg {
+    position:fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    z-index:-1;   /* 在内容层下面 */
+  }
